chuẩn hóa và nâng cấp giao diện
